Added setup_homebrew.zsh so I can run a script with Dotbot
Installed homebrew command
Used brew to install httpie, bat packages
Used brew to install Chrome, VS Code packages
Deleted test directories

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,10 +12,7 @@
     - ~/Work
 
 - shell:
-#   - [git submodule update --init --recursive, Installing submodules]
-    - echo "hey you guys"
-    - sleep 2
     - 
-      command: ./test.zsh
+      command: ./setup_homebrew.zsh
       stdout: true
       stderr: true
